--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Changes for Plack::App::FakeApache
 
+0.04 - Fix README in release and add files missing from 0.03 CPAN Dist 
+       (forgot ./Build manifest)
+
 0.03 - Thu Jun 20 15:04:21 CEST 2013
   * Multiple enhancements from Lasse Makholm
     - Support for Authen and Authz handlers
@@ -12,10 +15,10 @@ Changes for Plack::App::FakeApache
     - Connection object
     - Tie STDOUT so prints in response handler are passed to client
     - New methods: filename, document_root, args
-
+ 
 0.02 - Mon Aug 15 11:38:33 CEST 2011
-  * Rename module to a saner name
-  * Support for err_headers_out() and set_content_length
+        * Rename module to a saner name
+	* Support for err_headers_out() and set_content_length
  
 0.01 - Tue Nov 30 17:02:06 CET 2010
-  * Initial release
+        * Initial release
