Import of ZARQUON/Plack-App-FakeApache-0.05.tar.gz from CPAN.
gitpan-cpan-distribution: Plack-App-FakeApache
gitpan-cpan-version:      0.05
gitpan-cpan-path:         ZARQUON/Plack-App-FakeApache-0.05.tar.gz
gitpan-cpan-author:       ZARQUON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Changes for Plack::App::FakeApache
 
+0.05 - Allow Plack::App::FakeApache to use a subclass of
+       Plack::App::FakeApache::Request 
+     - Introduce parts of CGI::Emulate::PSGI to deal with ENV and
+       STDIN problems.
+
 0.04 - Fix README in release and add files missing from 0.03 CPAN Dist 
        (forgot ./Build manifest)
 
