--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Changes for Plack::App::FakeApache
 
+0.06 - Support for a minimal shim over exit()
+
 0.05 - Allow Plack::App::FakeApache to use a subclass of
        Plack::App::FakeApache::Request 
      - Introduce parts of CGI::Emulate::PSGI to deal with ENV and
